--- a/styles/languages/C.less
+++ b/styles/languages/C.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com       +
 website   http://arcticicestudio.com            +
 copyright Copyright (C) 2015-2016               +
 created   2015-08-28 11:42 UTC+0200             +
-modified  2016-01-31 11:19 UTC+0100             +
+modified  2016-01-31 18:11 UTC+0100             +
 +++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -75,10 +75,8 @@ LESSCSS
     &.numeric {
       color: @color-syntax-number;
     }
-    &.character {
-      &.escape {
-        color: @color-syntax-escape;
-      }
+    &.character.escape {
+      color: @color-syntax-escape;
     }
     &.language {
       color: @color-syntax-keyword;
@@ -89,31 +87,22 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
-    }
+  .entity.name.function {
+    color: @color-syntax-function;
   }
   /* +------------------------------------------------------------------------[3]-+ */
 
   /* +----------------------------------------------------------------------------+
      + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
-  .keyword {
-    &.control {
-      color: @color-syntax-keyword;
+  .keyword.control {
+    color: @color-syntax-keyword;
 
-      &.import {
-        &.include {
-          color: @color-syntax-c-preprocessor;
-          font-weight: bold;
-        }
-        &.define {
-          color: @color-syntax-c-preprocessor;
-          font-weight: bold;
-        }
+    &.import {
+      &.include,
+      &.define {
+        color: @color-syntax-c-preprocessor;
+        font-weight: bold;
       }
     }
   }
@@ -127,15 +116,11 @@ LESSCSS
       &.macro {
         color: @color-syntax-other;
       }
-      &.c {
-        &.include {
-          color: @color-syntax-keyword;
-        }
+      &.c.include {
+        color: @color-syntax-keyword;
       }
     }
-    &.block {
-      color: @color-syntax-other;
-    }
+    &.block,
     &.parens {
       color: @color-syntax-other;
     }
@@ -147,23 +132,17 @@ LESSCSS
      +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
-      &.string {
-        &.begin, &.end {
-          color: @color-syntax-symbol;
-        }
-      }
+      &.string.begin,
+      &.string.end,
       &.parameters {
         color: @color-syntax-symbol;
       }
     }
     &.section {
-      &.block {
-        &.begin, &.end {
-          color: @color-syntax-symbol;
-        }
-      }
+      &.block,
       &.parens {
-        &.begin, &.end {
+        &.begin,
+        &.end {
           color: @color-syntax-symbol;
         }
       }
@@ -183,15 +162,11 @@ LESSCSS
      + Support                                                                [7] +
      +----------------------------------------------------------------------------+ */
   .support {
-    &.type {
-      &.sys-types {
-        color: @color-syntax-class;
-      }
+    &.type.sys-types {
+      color: @color-syntax-class;
     }
     &.function {
-      &.any-method {
-        color: @color-syntax-function;
-      }
+      &.any-method,
       &.C99 {
         color: @color-syntax-function;
       }
@@ -202,10 +177,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Storage                                                                [8] +
      +----------------------------------------------------------------------------+ */
-  .storage {
-    &.type {
-      color: @color-syntax-class;
-    }
+  .storage.type {
+    color: @color-syntax-class;
   }
   /* +------------------------------------------------------------------------[8]-+ */
 
@@ -220,10 +193,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Variable                                                              [10] +
      +----------------------------------------------------------------------------+ */
-  .variable {
-    &.parameter {
-      color: @color-syntax-variable;
-    }
+  .variable.parameter {
+    color: @color-syntax-variable;
   }
   /* +-----------------------------------------------------------------------[10]-+ */
 }
