--- a/styles/languages/Clojure.less
+++ b/styles/languages/Clojure.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com             +
 website   http://arcticicestudio.com                  +
 copyright Copyright (C) 2015-2016                     +
 created   2015-08-28 12:07 UTC+0200                   +
-modified  2016-01-31 11:22 UTC+0100                   +
+modified  2016-01-31 18:13 UTC+0100                   +
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -70,9 +70,7 @@ LESSCSS
      + Constant                                                               [2] +
      +----------------------------------------------------------------------------+ */
   .constant {
-    &.keyword {
-      color: @color-syntax-keyword;
-    }
+    &.keyword,
     &.language {
       color: @color-syntax-keyword;
     }
@@ -86,10 +84,8 @@ LESSCSS
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
   .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
+    &.name.function {
+      color: @color-syntax-function;
     }
     &.global {
       color: @color-syntax-class;
@@ -100,10 +96,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
-  .keyword {
-    &.control {
-      color: @color-syntax-keyword;
-    }
+  .keyword.control {
+    color: @color-syntax-keyword;
   }
   /* +------------------------------------------------------------------------[4]-+ */
 
@@ -124,18 +118,11 @@ LESSCSS
      + Punctuation                                                            [6] +
      +----------------------------------------------------------------------------+ */
   .punctuation {
-    &.definition {
-      &.string {
-        &.begin, &.end {
-          color: @color-syntax-symbol;
-        }
-      }
-    }
-    &.section {
-      &.expression {
-        &.begin, &.end {
-          color: @color-syntax-symbol;
-        }
+    &.definition.string,
+    &.section.expression {
+      &.begin,
+      &.end {
+        color: @color-syntax-symbol;
       }
     }
   }
@@ -144,10 +131,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Storage                                                                [7] +
      +----------------------------------------------------------------------------+ */
-  .storage {
-    &.control {
-      color: @color-syntax-keyword;
-    }
+  .storage.control {
+    color: @color-syntax-keyword;
   }
   /* +------------------------------------------------------------------------[7]-+ */
 
