--- a/styles/languages/HAML.less
+++ b/styles/languages/HAML.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com          +
 website   http://arcticicestudio.com               +
 copyright Copyright (C) 2015-2016                  +
 created   2015-08-12 14:47 UTC+0200                +
-modified  2016-01-31 11:51 UTC+0100                +
+modified  2016-01-31 18:55 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -62,7 +62,9 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
      +----------------------------------------------------------------------------+ */
-
+  .comment {
+    color: @color-syntax-comment;
+  }
   /* +------------------------------------------------------------------------[1]-+ */
 
   /* +----------------------------------------------------------------------------+
@@ -87,15 +89,11 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .entity {
-    &.name {
-      &.tag {
-        color: @color-syntax-keyword;
+  .entity.name.tag {
+    color: @color-syntax-keyword;
 
-        &.class {
-          color: @color-syntax-class;
-        }
-      }
+    &.class {
+      color: @color-syntax-class;
     }
   }
   /* +------------------------------------------------------------------------[3]-+ */
@@ -103,10 +101,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
-  .keyword {
-    &.control {
-      color: @color-syntax-keyword;
-    }
+  .keyword.control {
+    color: @color-syntax-keyword;
   }
   /* +------------------------------------------------------------------------[4]-+ */
 
@@ -114,13 +110,9 @@ LESSCSS
      + Meta                                                                   [5] +
      +----------------------------------------------------------------------------+ */
   .meta {
-    &.line {
+    &.line,
+    &.section.attributes {
       color: @color-syntax-other;
-    }
-    &.section {
-      &.attributes {
-        color: @color-syntax-symbol;
-      }
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
@@ -134,7 +126,8 @@ LESSCSS
         color: @color-syntax-keyword;
       }
       &.string {
-        &.begin, &.end {
+        &.begin,
+        &.end {
           color: @color-syntax-symbol;
         }
       }
@@ -147,9 +140,7 @@ LESSCSS
       }
     }
     &.separator {
-      &.key-value {
-        color: @color-syntax-operator;
-      }
+      &.key-value,
       &.other {
         color: @color-syntax-operator;
       }
@@ -163,14 +154,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Support                                                                [7] +
      +----------------------------------------------------------------------------+ */
-  .support {
-    &.function {
-      color: @color-syntax-function;
-
-      /*&.viewhelpers {
-        color: @color-syntax-function;
-      }*/
-    }
+  .support.function {
+    color: @color-syntax-function;
   }
   /* +------------------------------------------------------------------------[7]-+ */
 
