--- a/styles/languages/Markdown.less
+++ b/styles/languages/Markdown.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com                              +
 website   http://arcticicestudio.com                                   +
 copyright Copyright (C) 2015-2016                                      +
 created   2015-03-15 20:17 UTC+0100                                    +
-modified  2016-01-31 16:47 UTC+0100                                    +
+modified  2016-01-31 23:24 UTC+0100                                    +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -94,10 +94,8 @@ LESSCSS
         color: @color-syntax-markdown-link;
       }
     }
-    &.bold {
-      color: @color-syntax-string;
-    }
-    &.italic {
+    &.bold,
+    &.italic  {
       color: @color-syntax-string;
     }
     &.raw {
@@ -117,11 +115,8 @@ LESSCSS
      + Punctuation                                                            [4] +
      +----------------------------------------------------------------------------+ */
   .punctation {
-    &.definition {
-      &.begin, &.end {
-        color: @color-syntax-symbol;
-      }
-    }
+    &.definition.begin,
+    &.definition.end,
     &.seperator {
       color: @color-syntax-symbol;
     }
@@ -144,9 +139,7 @@ LESSCSS
      + Variable                                                              [6] +
      +----------------------------------------------------------------------------+ */
   .variable {
-    &.unordered.list {
-      color: @color-syntax-class;
-    }
+    &.unordered.list,
     &.ordered.list {
       color: @color-syntax-class;
     }
