--- a/styles/languages/PropertyList.less
+++ b/styles/languages/PropertyList.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com                   +
 website   http://arcticicestudio.com                        +
 copyright Copyright (C) 2015-2016                           +
 created   2015-09-24 15:18 UTC+0200                         +
-modified  2016-01-31 17:02 UTC+0100                         +
+modified  2016-01-31 23:30 UTC+0100                         +
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -68,23 +68,19 @@ LESSCSS
      + Constant                                                               [2] +
      +----------------------------------------------------------------------------+ */
   .constant {
-    &.other {
-      &.key {
-        color: @color-syntax-variable;
-      }
+    &.other.key {
+      color: @color-syntax-variable;
     }
     &.numeric {
       color: @color-syntax-number;
 
-      &.base64{
+      &.base64 {
         color: @color-syntax-propertylist-base64;
         font-weight: bold;
       }
     }
-    &.character {
-      &.escape {
-        color: @color-syntax-escape;
-      }
+    &.character.escape {
+      color: @color-syntax-escape;
     }
   }
   /* +------------------------------------------------------------------------[2]-+ */
@@ -92,12 +88,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Invalid                                                                [3] +
      +----------------------------------------------------------------------------+ */
-  .invalid {
-    &.illegal {
-      &.character-not-allowed-here {
-        color: @color-syntax-propertylist-illegal;
-      }
-    }
+  .invalid.illegal.character-not-allowed-here {
+    color: @color-syntax-propertylist-illegal;
   }
   /* +------------------------------------------------------------------------[3]-+ */
 
@@ -105,13 +97,9 @@ LESSCSS
      + Meta                                                                   [4] +
      +----------------------------------------------------------------------------+ */
   .meta {
-    &.binary-data {
+    &.binary-data,
+    &.scope.dictionary-item {
       color: @color-syntax-keyword;
-    }
-    &.scope {
-      &.dictionary-item {
-        color: @color-syntax-keyword;
-      }
     }
   }
   /* +------------------------------------------------------------------------[4]-+ */
@@ -121,18 +109,11 @@ LESSCSS
      +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
-      &.dictionary {
-        &.begin, &.end {
-          color: @color-syntax-symbol;
-        }
-      }
-      &.array {
-        &.begin, &.end {
-          color: @color-syntax-symbol;
-        }
-      }
+      &.dictionary,
+      &.array,
       &.string {
-        &.begin, &.end {
+        &.begin,
+        &.end {
           color: @color-syntax-symbol;
         }
       }
@@ -140,7 +121,8 @@ LESSCSS
         color: @color-syntax-keyword;
       }
       &.comment {
-        &.begin, &.end {
+        &.begin,
+        &.end {
           color: @color-syntax-comment;
         }
       }
