--- a/styles/languages/SASS.less
+++ b/styles/languages/SASS.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com          +
 website   http://arcticicestudio.com               +
 copyright Copyright (C) 2015-2016                  +
 created   2015-03-15 20:17 UTC+0100                +
-modified  2016-01-31 17:12 UTC+0100                +
+modified  2016-01-31 23:37 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -54,14 +54,11 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Keyword                                                                [1] +
      +----------------------------------------------------------------------------+ */
-  .keyword {
-    &.control {
-      &.at-rule {
-        &.import, &.include {
-          color: @color-syntax-css-at-rule;
-          font-weight: bold;
-        }
-      }
+  .keyword.control.at-rule {
+    &.import,
+    &.include {
+      color: @color-syntax-css-at-rule;
+      font-weight: bold;
     }
   }
   /* +------------------------------------------------------------------------[1]-+ */
