--- a/styles/languages/YAML.less
+++ b/styles/languages/YAML.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com          +
 website   http://arcticicestudio.com               +
 copyright Copyright (C) 2015-2016                  +
 created   2015-03-15 20:17 UTC+0100                +
-modified  2016-01-31 17:25 UTC+0100                +
+modified  2016-01-31 23:42 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -66,22 +66,16 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Constant                                                               [2] +
      +----------------------------------------------------------------------------+ */
-  .constant {
-    &.numeric {
-      color: @color-syntax-number;
-    }
+  .constant.numeric {
+    color: @color-syntax-number;
   }
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .entity {
-    &.name {
-      &.tag {
-        color: @color-syntax-tag;
-      }
-    }
+  .entity.name.tag {
+    color: @color-syntax-tag;
   }
   /* +------------------------------------------------------------------------[3]-+ */
 
@@ -97,7 +91,8 @@ LESSCSS
         color: @color-syntax-keyword;
       }
       &.string {
-        &.begin, &.end {
+        &.begin,
+        &.end {
           color: @color-syntax-symbol;
         }
       }
@@ -111,10 +106,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + String                                                                 [5] +
      +----------------------------------------------------------------------------+ */
-  .string {
-    &.unquoted {
-      color: @color-syntax-string;
-    }
+  .string.unquoted {
+    color: @color-syntax-string;
   }
   /* +------------------------------------------------------------------------[5]-+ */
 }
